kubernetes/bookshelf/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bookshelf
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: bookshelf
      app.kubernetes.io/name: bookshelf
      app.kubernetes.io/instance: bookshelf
  template:
    metadata:
      labels:
        app: bookshelf
        app.kubernetes.io/name: bookshelf
        app.kubernetes.io/instance: bookshelf
    spec:
      containers:
      - name: bookshelf
        image: ghcr.io/pennydreadful/bookshelf
        ports:
        - containerPort: 8787
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /books
          name: books
        - mountPath: /downloads/qbittorrent
          name: qbittorrent-downloads
        - mountPath: /booklore-book-ingest
          name: booklore-ingest
        - mountPath: /scripts
          name: scripts
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: bookshelf-config
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared/books/bookshelf
        name: books
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads/qbittorrent
        name: qbittorrent-downloads
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads/booklore-ingestion
        name: booklore-ingest
      - name: scripts
        configMap:
          name: bookshelf-scripts
          defaultMode: 0755
