kubernetes/bookshelf/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: bookshelf

spec:
  ports:
  - port: 8787
    targetPort: 8787
    protocol: TCP
    name: http
  selector:
    app: bookshelf
